Fixed minor alignment issue

--- a/xCheckStudio/Webviewer/CSS/checkinfo.css
+++ b/xCheckStudio/Webviewer/CSS/checkinfo.css
@@ -176,7 +176,7 @@ div {
   width               : 350px;
   position            : absolute;
   margin              : 0;
-  left                : 24px;
+  left                : 225px;
   -ms-transform       : rotate(0deg); /* IE 9 */
   -webkit-transform   : rotate(0deg); /* Chrome, Safari, Opera */
   transform           : rotate(0deg);
